--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
+    "@rowanmanning/eslint-config": "^2.1.0",
+    "@rowanmanning/make": "^2.0.0",
+    "eslint": "^6.8.0",
     "nodemon": "^2.0.2"
   },
   "main": "./index.js",
