Use my standard way of setting up .env files

--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,7 @@
 BASE_URL=https://your.domain.net
 
 # MongoDB connection string
-MONGODB_URI=
+MONGODB_URI=mongodb://localhost:27017/yeehaw
 
 # for session generation
 SESSION_SECRET=changeMeToAnythingQuiteRandom
