Properly document how to set everything up

--- a/sample.env
+++ b/sample.env
@@ -1,13 +1,31 @@
-# public URL where your app runs. No end slash
-BASE_URL=https://your.domain.net
+# This is a sample .env file for use in local development.
+# Duplicate this file as .env in the root of the project
+# and update the environment variables to match your
+# desired config.
+#
+# You can copy this file to the right place by running:
+# make env
+#
+# See the README for full descriptions of each of the
+# available configurations.
 
-# MongoDB connection string
+# A public URL where your app runs, with no trailing slash.
+# Used for redirects during slack authentication
+BASE_URL=https://localhost:8080
+
+# A MongoDB connection string, used to connect to the database
 MONGODB_URI=mongodb://localhost:27017/yeehaw
 
-# for session generation
-SESSION_SECRET=changeMeToAnythingQuiteRandom
+# The HTTP port to run the application on
+PORT=8080
 
-# go to https://api.slack.com/apps, choose your app, then see Basic Information:
+# A secret key for session hashing. If this is not set, a
+# random key will be used on each restart of the application
+# which will cause sessions to drop off
+SESSION_SECRET=
+
+# Slack App authentication details. See the README for how
+# to get this information
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
 SLACK_CLIENT_SIGNING_SECRET=
