--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.8"
+    "request-promise-native": "^1.0.8",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@rowanmanning/eslint-config": "^2.1.0",
@@ -35,7 +36,6 @@
   },
   "main": "./index.js",
   "scripts": {
-    "start": "node .",
-    "start-dev": "nodemon ."
+    "start": "node ."
   }
 }
