--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "bugs": "https://github.com/rowanmanning/yeehaw/issues",
   "license": "MIT",
   "engines": {
-    "node": "16.x",
-    "npm": "8.x"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "scripts": {
     "start": "node .",
@@ -53,5 +53,9 @@
     "ignore": [
       "test/*"
     ]
+  },
+  "volta": {
+    "node": "20.11.0",
+    "npm": "10.3.0"
   }
 }
