--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "verify:types": "tsc --noEmit --project ./jsconfig.json",
     "project:verify": "npx --yes @rowanmanning/validate-project@2 --type git node-express-app",
     "project:fix": "npx --yes @rowanmanning/validate-project@2 --type git node-express-app --fix",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@slack/bolt": "^3.17.1",
@@ -43,7 +43,7 @@
     "@commitlint/config-conventional": "^18.6.0",
     "@rowanmanning/eslint-config": "^8.1.0",
     "eslint": "^8.56.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.7",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
     "typescript": "^5.3.3"
