chore: remove npm engine definitions

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "bugs": "https://github.com/rowanmanning/yeehaw/issues",
   "license": "MIT",
   "engines": {
-    "node": "20.x",
-    "npm": "10.x"
+    "node": "20.x"
   },
   "scripts": {
     "verify": "npm run verify:biome && npm run verify:types",
@@ -52,7 +51,6 @@
     ]
   },
   "volta": {
-    "node": "20.11.0",
-    "npm": "10.3.0"
+    "node": "20.11.0"
   }
 }
