--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "verify": "npm run verify:biome && npm run verify:types",
     "verify:biome": "biome check",
     "start": "node .",
-    "start:dev": "nodemon . | pino-pretty",
+    "start:dev": "node --watch . | pino-pretty",
     "verify:types": "tsc --noEmit --project ./jsconfig.json",
     "prepare": "husky"
   },
@@ -40,15 +40,8 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@rowanmanning/biome-config": "^1.3.1",
     "husky": "^9.1.6",
-    "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.2",
     "typescript": "^5.6.2"
-  },
-  "nodemonConfig": {
-    "ext": "js,jsx",
-    "ignore": [
-      "test/*"
-    ]
   },
   "volta": {
     "node": "20.11.0"
